[bdist_wheel]
universal = 0

[metadata]
name = motr
description = MatrixOrigin Vega-Lite Transformer
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
keywords = vega, altair
license = Apache
license_files = LICENSE.txt
python = "^3.9"
classifiers = 
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Database :: Visualization

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires = 
	altair>=4.2.0
	pandas
	psutil
